AC_INIT([achello], [0.1], [https://libusual.github.com])
AC_CONFIG_SRCDIR([blob.c])
AC_CONFIG_HEADER([lib/usual/config.h])
AC_PREREQ([2.59])

LIBCURL_CHECK_CONFIG
AM_PATH_XML2

AC_USUAL_PORT_CHECK
AC_USUAL_PROGRAM_CHECK
AC_USUAL_HEADER_CHECK
AC_USUAL_TYPE_CHECK
AC_USUAL_FUNCTION_CHECK

LIBS="${LIBS} ${LIBCURL} ${XML_LIBS}"
CPPFLAGS="${CPPFLAGS} ${LIBCURL_CPPFLAGS} ${XML_CPPFLAGS}"

AC_OUTPUT([antimake.mk])
